# deeprhythm

./: .gitignore  README.md  batch_infer.py  batch_librosa.py  benchmark-tf.py  benchmark.py  data_split.ipynb  datacreate.py  dataset.py  deeprhythm.code-workspace  hcqm.py  inference.ipynb  model.ipynb  model.py  pyproject.toml  requirements.txt  test_model_path.py  training.ipynb  utils.py
.github/workflows/: ci.yml
src/: utils.py
src/audio_proc/: bandfilter.py  hcqm.py  onset.py
src/dataset/: clip_dataset.py  intake.py  song_dataset.py
src/deeprhythm/: __init__.py  batch_infer.py  infer.py  utils.py
src/deeprhythm/audio_proc/: bandfilter.py  hcqm.py  onset.py
src/deeprhythm/dataset/: clip_dataset.py  song_dataset.py  utils.py
src/deeprhythm/model/: frame_cnn.py  infer.py  predictor.py  train.py
src/model/: global_attn.py  infer.py  predictor.py  train.py
tests/: conftest.py  test_audio_proc.py  test_model.py  test_predictor.py  test_utils.py
