[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeprhythm"
version = "0.0.6"
authors = [
  { name="bleugreen", email="bleugreendesign@gmail.com" },
]
description = "A fast, accurate Tempo Predictor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "torchaudio",
  "librosa",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/Mitchell57/deeprhythm"
Issues = "https://github.com/Mitchell57/deeprhythm/issues"