[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeprhythm"
version = "0.0.12"
authors = [
  { name="bleugreen", email="bleugreendesign@gmail.com" },
]
description = "A fast, accurate Tempo Predictor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "torchaudio",
  "nnaudio==0.3.3",
  "librosa",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/bleugreen/deeprhythm"
Issues = "https://github.com/bleugreen/deeprhythm/issues"