[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeprhythm"
version = "0.0.13"
authors = [
  { name="bleugreen", email="bleugreendesign@gmail.com" },
]
description = "A fast, accurate Tempo Predictor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "torchaudio",
  "nnaudio==0.3.3",
  "librosa",
  "numpy",
  "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/bleugreen/deeprhythm"
Issues = "https://github.com/bleugreen/deeprhythm/issues"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
